--- a/iOS/RiRiKoKo/TabStoryReferenceSample/S06_Records.storyboard
+++ b/iOS/RiRiKoKo/TabStoryReferenceSample/S06_Records.storyboard
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="SnM-GY-p07">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="SnM-GY-p07">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -8,7 +8,7 @@
         <!--Records Collection View Controller-->
         <scene sceneID="HPG-Qf-ICI">
             <objects>
-                <collectionViewController id="SnM-GY-p07" customClass="S06_RecordsCollectionViewController" customModule="fleaMarket" customModuleProvider="target" sceneMemberID="viewController">
+                <collectionViewController id="SnM-GY-p07" customClass="S06_RecordsCollectionViewController" customModule="RiRiKoKo" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="DX5-ZL-deW">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
