--- a/iOS/RiRiKoKo/TabStoryReferenceSample/Base.lproj/3rdTab.storyboard
+++ b/iOS/RiRiKoKo/TabStoryReferenceSample/Base.lproj/3rdTab.storyboard
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="6hf-KP-UVP">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="6hf-KP-UVP">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -17,28 +17,26 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xap-sH-YSH">
-                                <rect key="frame" x="107.5" y="333" width="160" height="53"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xap-sH-YSH">
+                                <rect key="frame" x="127" y="354" width="120" height="120"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="160" id="p5k-4a-wTH"/>
-                                    <constraint firstAttribute="height" constant="53" id="yix-ba-osm"/>
+                                    <constraint firstAttribute="width" constant="120" id="p5k-4a-wTH"/>
+                                    <constraint firstAttribute="height" constant="120" id="yix-ba-osm"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="30"/>
-                                <state key="normal" title="Photo Lib">
+                                <state key="normal" title="Photo Lib" image="photoLib">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                                 <connections>
                                     <action selector="PhotoLibraryAction:" destination="21j-ss-hip" eventType="touchUpInside" id="yfM-tw-ARW"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lxz-hK-nLQ">
-                                <rect key="frame" x="117" y="210" width="140" height="53"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lxz-hK-nLQ">
+                                <rect key="frame" x="127" y="164" width="120" height="120"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="53" id="htg-aM-vcB"/>
-                                    <constraint firstAttribute="width" constant="140" id="uhe-Ko-y2c"/>
+                                    <constraint firstAttribute="height" constant="120" id="htg-aM-vcB"/>
+                                    <constraint firstAttribute="width" constant="120" id="uhe-Ko-y2c"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="30"/>
-                                <state key="normal" title="Camera">
+                                <state key="normal" title="Camera" image="Cam">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                                 <connections>
@@ -51,7 +49,7 @@
                             <constraint firstItem="Xap-sH-YSH" firstAttribute="centerX" secondItem="5QF-vb-6z5" secondAttribute="centerX" id="RrK-aT-48d"/>
                             <constraint firstItem="lxz-hK-nLQ" firstAttribute="centerX" secondItem="5QF-vb-6z5" secondAttribute="centerX" id="ZYf-iH-Hpw"/>
                             <constraint firstItem="Xap-sH-YSH" firstAttribute="top" secondItem="lxz-hK-nLQ" secondAttribute="bottom" constant="70" id="c3M-0N-T2S"/>
-                            <constraint firstItem="lxz-hK-nLQ" firstAttribute="top" secondItem="Ih1-p3-POD" secondAttribute="bottom" constant="146" id="oLz-Rq-n3g"/>
+                            <constraint firstItem="lxz-hK-nLQ" firstAttribute="top" secondItem="Ih1-p3-POD" secondAttribute="bottom" constant="100" id="oLz-Rq-n3g"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="0L2-SA-hQe"/>
@@ -96,6 +94,8 @@
         </scene>
     </scenes>
     <resources>
+        <image name="Cam" width="238" height="232"/>
         <image name="camera" width="26" height="26"/>
+        <image name="photoLib" width="238" height="232"/>
     </resources>
 </document>
