--- a/iOS/RiRiKoKo/TabStoryReferenceSample/itemDetail.storyboard
+++ b/iOS/RiRiKoKo/TabStoryReferenceSample/itemDetail.storyboard
@@ -39,6 +39,14 @@
             </objects>
             <point key="canvasLocation" x="578.5" y="378"/>
         </scene>
+        <!--Checkingout-->
+        <scene sceneID="Rdt-s5-rOg">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Checkingout" id="d3C-sM-2dh" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="SSa-XM-6Na" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="600.5" y="113"/>
+        </scene>
         <!--Item Detail View Controller-->
         <scene sceneID="cKg-xB-nq6">
             <objects>
@@ -222,6 +230,9 @@
                                                 <state key="normal" title="Buy">
                                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                 </state>
+                                                <connections>
+                                                    <action selector="buyButtonAction:" destination="1LD-cq-aO6" eventType="touchUpInside" id="nFb-DV-Hz0"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Kpi-7D-AmV">
                                                 <rect key="frame" x="197" y="20" width="157.5" height="40"/>
@@ -348,6 +359,7 @@
                         <segue destination="tOK-uY-2Q3" kind="show" identifier="goBack" id="zzf-mn-SPf"/>
                         <segue destination="SCi-z8-ZhE" kind="show" identifier="showUserDetail" id="BuP-Pw-szy"/>
                         <segue destination="BtT-jP-m1o" kind="show" identifier="editItemSegue" id="s9N-5u-bHe"/>
+                        <segue destination="d3C-sM-2dh" kind="show" identifier="checkOut" id="d8T-su-ZZS"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4VU-cP-6zY" userLabel="First Responder" sceneMemberID="firstResponder"/>
