--- a/iOS/RiRiKoKo/TabStoryReferenceSample/UserDetail.storyboard
+++ b/iOS/RiRiKoKo/TabStoryReferenceSample/UserDetail.storyboard
@@ -18,56 +18,52 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="3iA-2b-EBV">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="150"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="150" id="sYc-NP-4NL"/>
-                                </constraints>
-                            </mapView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="uBe-LZ-3hq">
-                                <rect key="frame" x="20" y="170" width="150" height="150"/>
+                                <rect key="frame" x="20" y="20" width="100" height="100"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="150" id="T33-Kr-KwQ"/>
-                                    <constraint firstAttribute="width" constant="150" id="gaX-hj-wJh"/>
+                                    <constraint firstAttribute="height" constant="100" id="CRS-5B-Acf"/>
+                                    <constraint firstAttribute="width" constant="100" id="aeM-yD-OHg"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Oi1-dU-shp">
-                                <rect key="frame" x="197" y="170" width="61" height="30"/>
+                                <rect key="frame" x="147" y="55" width="61" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="25"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="7n2-Fo-qjJ">
-                                <rect key="frame" x="0.0" y="334" width="600" height="266"/>
-                                <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
+                                <rect key="frame" x="0.0" y="134" width="600" height="466"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="466" id="dNt-gl-tEU"/>
+                                </constraints>
                                 <inset key="scrollIndicatorInsets" minX="10" minY="0.0" maxX="10" maxY="0.0"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="Qn9-U6-DXy">
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="20" minimumInteritemSpacing="0.0" id="Qn9-U6-DXy">
                                     <size key="itemSize" width="50" height="50"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="20" minY="10" maxX="20" maxY="10"/>
+                                    <inset key="sectionInset" minX="20" minY="20" maxX="20" maxY="20"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cell" id="Adl-sf-FkB" userLabel="cell" customClass="CollectionViewCell" customModule="RiRiKoKo" customModuleProvider="target">
-                                        <rect key="frame" x="20" y="10" width="180" height="210"/>
+                                        <rect key="frame" x="20" y="20" width="180" height="210"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                             <rect key="frame" x="0.0" y="0.0" width="180" height="210"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="5Uv-pf-GIF">
-                                                    <rect key="frame" x="0.0" y="0.0" width="180" height="148"/>
-                                                </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="afB-1G-Iav">
-                                                    <rect key="frame" x="0.0" y="156" width="180" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nfw-8w-Qyh">
                                                     <rect key="frame" x="0.0" y="181" width="180" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5Uv-pf-GIF">
+                                                    <rect key="frame" x="0.0" y="0.0" width="180" height="148"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="afB-1G-Iav">
+                                                    <rect key="frame" x="0.0" y="152" width="180" height="25"/>
+                                                    <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="21"/>
+                                                    <color key="textColor" red="0.57254901960000004" green="0.2274509804" blue="0.80784313730000001" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
@@ -100,23 +96,24 @@
                                 </connections>
                             </collectionView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.39607843139999999" green="0.28627450980000002" blue="0.50980392159999999" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="3iA-2b-EBV" secondAttribute="trailing" id="2Ec-SF-N6Q"/>
-                            <constraint firstItem="Oi1-dU-shp" firstAttribute="leading" secondItem="uBe-LZ-3hq" secondAttribute="trailing" constant="27" id="2Gk-Ca-6j0"/>
-                            <constraint firstAttribute="leadingMargin" secondItem="uBe-LZ-3hq" secondAttribute="leading" id="BPz-CV-iha"/>
-                            <constraint firstAttribute="trailing" secondItem="7n2-Fo-qjJ" secondAttribute="trailing" id="ELk-g2-uci"/>
-                            <constraint firstItem="OvJ-WR-aGD" firstAttribute="top" secondItem="7n2-Fo-qjJ" secondAttribute="bottom" id="LMN-xN-YFG"/>
-                            <constraint firstItem="3iA-2b-EBV" firstAttribute="top" secondItem="hKW-if-tnh" secondAttribute="top" id="MRI-dg-CQh"/>
-                            <constraint firstItem="OvJ-WR-aGD" firstAttribute="top" secondItem="7n2-Fo-qjJ" secondAttribute="bottom" id="Ont-Hv-1pd"/>
-                            <constraint firstItem="7n2-Fo-qjJ" firstAttribute="leading" secondItem="hKW-if-tnh" secondAttribute="leading" id="TXP-tm-Y5C"/>
-                            <constraint firstItem="Oi1-dU-shp" firstAttribute="top" secondItem="3iA-2b-EBV" secondAttribute="bottom" constant="20" id="XfJ-fb-EQd"/>
-                            <constraint firstItem="7n2-Fo-qjJ" firstAttribute="leading" secondItem="hKW-if-tnh" secondAttribute="leading" id="dyN-Hh-4I4"/>
-                            <constraint firstAttribute="trailing" secondItem="7n2-Fo-qjJ" secondAttribute="trailing" id="ksV-aG-dQm"/>
-                            <constraint firstItem="7n2-Fo-qjJ" firstAttribute="top" secondItem="uBe-LZ-3hq" secondAttribute="bottom" constant="14" id="m5Z-K0-HXY"/>
-                            <constraint firstItem="3iA-2b-EBV" firstAttribute="leading" secondItem="hKW-if-tnh" secondAttribute="leading" id="sef-Kl-BHy"/>
-                            <constraint firstItem="uBe-LZ-3hq" firstAttribute="top" secondItem="3iA-2b-EBV" secondAttribute="bottom" constant="20" id="yeb-e1-ObM"/>
+                            <constraint firstItem="7n2-Fo-qjJ" firstAttribute="leading" secondItem="hKW-if-tnh" secondAttribute="leading" id="35E-bg-6Sp"/>
+                            <constraint firstItem="Oi1-dU-shp" firstAttribute="centerY" secondItem="uBe-LZ-3hq" secondAttribute="centerY" id="4n2-sg-Tzi"/>
+                            <constraint firstItem="Oi1-dU-shp" firstAttribute="top" secondItem="8BX-SI-6Zj" secondAttribute="bottom" id="CEq-Kd-23O"/>
+                            <constraint firstItem="7n2-Fo-qjJ" firstAttribute="bottom" secondItem="OvJ-WR-aGD" secondAttribute="top" id="FCl-SP-4Ts"/>
+                            <constraint firstItem="Oi1-dU-shp" firstAttribute="leading" secondItem="uBe-LZ-3hq" secondAttribute="trailing" constant="27" id="N4k-0E-RSe"/>
+                            <constraint firstItem="uBe-LZ-3hq" firstAttribute="top" secondItem="Oi1-dU-shp" secondAttribute="top" id="XH9-IM-mtD"/>
+                            <constraint firstAttribute="trailing" secondItem="7n2-Fo-qjJ" secondAttribute="trailing" id="l8l-QS-TRU"/>
+                            <constraint firstItem="7n2-Fo-qjJ" firstAttribute="top" secondItem="uBe-LZ-3hq" secondAttribute="bottom" constant="14" id="mkq-VJ-gPD"/>
+                            <constraint firstItem="uBe-LZ-3hq" firstAttribute="leading" secondItem="hKW-if-tnh" secondAttribute="leadingMargin" id="uUJ-Cj-8gh"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="XH9-IM-mtD"/>
+                                <exclude reference="CEq-Kd-23O"/>
+                            </mask>
+                        </variation>
                     </view>
                     <connections>
                         <outlet property="collectionView" destination="7n2-Fo-qjJ" id="ImH-r0-gYm"/>
